--- a/VisualStateAndDataTemplate/App.xaml
+++ b/VisualStateAndDataTemplate/App.xaml
@@ -1,8 +1,13 @@
 ﻿<Application
-    x:Class="VisualStateAndDataTemplate.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:VisualStateAndDataTemplate"
+    xmlns:SampleDataSource="using:Blend.SampleData.SampleDataSource" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
+    x:Class="VisualStateAndDataTemplate.App"
     RequestedTheme="Light">
+
+    <Application.Resources>
+        <SampleDataSource:SampleDataSource x:Key="SampleDataSource" d:IsDataSource="True"/>
+    </Application.Resources>
 
 </Application>
