--- a/VisualStateAndDataTemplate/MainPage.xaml
+++ b/VisualStateAndDataTemplate/MainPage.xaml
@@ -1,13 +1,74 @@
-﻿<Page
-    x:Class="VisualStateAndDataTemplate.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:VisualStateAndDataTemplate"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="VisualStateAndDataTemplate.MainPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:VisualStateAndDataTemplate"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"   
+      xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
+      mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" DataContext="{Binding Source={StaticResource SampleDataSource}}">
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="AdaptiveVisualStates">
+                <VisualState x:Name="NarrowState">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0" />
+                    </VisualState.StateTriggers>
+                </VisualState>
 
+                <VisualState x:Name="NormalState">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="640" />
+                    </VisualState.StateTriggers>
+                </VisualState>
+
+                <VisualState x:Name="WideState">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="1008" />
+                    </VisualState.StateTriggers>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
+
+        <ListView ItemsSource="{Binding Groups}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <UserControl>
+                        <Interactivity:Interaction.Behaviors>
+                            <local:VisualStateInTemplateBehavior ParentVisualStateGroup="{Binding ElementName=AdaptiveVisualStates}">
+                                <local:VisualStateInTemplateBehavior.NarrowState>
+                                    <VisualState x:Name="Narrow">
+                                        <VisualState.Setters>
+                                            <Setter Target="Title.(TextBlock.FontSize)" Value="24" />
+                                        </VisualState.Setters>
+                                    </VisualState>
+                                </local:VisualStateInTemplateBehavior.NarrowState>
+
+                                <local:VisualStateInTemplateBehavior.NormalState>
+                                    <VisualState x:Name="Normal">
+                                        <VisualState.Setters>
+                                            <Setter Target="Title.(TextBlock.FontSize)" Value="32" />
+                                        </VisualState.Setters>
+                                    </VisualState>
+                                </local:VisualStateInTemplateBehavior.NormalState>
+
+                                <local:VisualStateInTemplateBehavior.WideState>
+                                    <VisualState x:Name="Wide">
+                                        <VisualState.Setters>
+                                            <Setter Target="Title.(TextBlock.FontSize)" Value="40" />
+                                        </VisualState.Setters>
+                                    </VisualState>
+                                </local:VisualStateInTemplateBehavior.WideState>
+                            </local:VisualStateInTemplateBehavior>
+                        </Interactivity:Interaction.Behaviors>
+
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="{Binding Property3}" Height="48" Width="48" Margin="12"/>
+                            <TextBlock x:Name="Title" Text="{Binding Property1}" VerticalAlignment="Center" />
+                        </StackPanel>
+                    </UserControl>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Page>
